tests/semantic/valid/functions/multiple.src
fn add(int a, int b) -> int {
    return a + b;
}

fn sub(int a, int b) -> int {
    return a - b;
}

fn mul(int a, int b) -> int {
    return a * b;
}

fn div(int a, int b) -> int {
    return a / b;
}

fn main() -> int {
    int x = add(5, 3);
    int y = sub(10, 4);
    int z = mul(x, y);
    return div(z, 2);
}
