tests/semantic/invalid/type_mismatch/operation.src
fn test() -> bool {
    int x = 5;
    bool y = true;
    bool z = x && y;
    return z;
}
